<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/llToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:text="@string/text_detail_information"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"
        />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTextBinBankCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llToolbar"
        android:text="@string/text_bin_bank_card"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/tvBinBankCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextBinBankCard"
        tools:text="123456789"
        android:textSize="18sp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tvBinBankCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_scheme_network"
            android:textSize="16sp"
            />

        <TextView
            android:layout_marginTop="4dp"
            android:id="@+id/tvSheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Visa"
            android:textSize="16sp"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/text_brand"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tvBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="Visa/Dankort"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/text_type"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="Debit"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/tvTextCountryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/text_country"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tvCountryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="Denmark"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tvCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="@string/currency"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tvLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="@string/latitude"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/tvLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="@string/longitude"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tvTextBank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/text_bank"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tvBankName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="Jyske Bank"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/tvBankCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="Hjørring"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/tvBankUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="www.jyskebank.dk"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/tvBankPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="+4589893300"
                android:textSize="16sp"
                />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>