<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/llSearchViewAndClearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    <androidx.appcompat.widget.SearchView
        android:id="@+id/svSearchBin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        android:inputType="number"
        android:digits="0123456789"
        app:queryHint="Input Bank Identification Number"
        />

        <ImageButton
            android:id="@+id/btnDeleteAllList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_delete_list"
            android:src="@drawable/ic_list_remove"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>
    <Button
        android:id="@+id/btnSendRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llSearchViewAndClearButton"
        android:layout_margin="4dp"
        android:text="@string/text_send_a_request"
        android:textSize="16sp"
        android:textAllCaps="false"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListDB"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSendRequest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_list_request"
        />
    <TextView
        android:id="@+id/tvNoDataInDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSendRequest"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/text_no_data_in_db"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>